styles.css
* {
  margin: 6px;
  padding: 5px;
  box-sizing: border-box;
}
* {
   font-size: 16px;
   font-weight: 400;
   line-height:1.6;
}
body{
    background-color: rgb(162, 218, 158);
    border-radius: 10%;
    border-color: brown;
}
h1 {
    color: red;
    font-size: medium;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
    text-align: center;
}
h2 {
    color: red;
    font-size: small;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
    text-align: center;
    font-weight: 100;
}
.broken-box{
  width: 300px;
  padding: 20px;
  border: none;
}
.card{
  width: 300px;
  padding: 20px;
  border: 1px solid gray;
}
.card-img{
  width: 100%;
  height: auto;
}
.card-title{
  margin-bottom: 15px;
}
.root{
  --font-base: 1rem;
  --font-4*1: 2.25rem;
  --font-3*1: 1.75rem;
  --font-small: 0.875rem;
}
.root{
  --color-primary:purple;
  --color-secondary:yellow;
  --color-background:light-green;
  --color-text:ruby-red;
  --color-muted:gray;
}
about.html{
  background-color: orange;
  h1{
    color: yellow;
  }
}
nav{
  display: flex;
  justify-content: space-between;
}
footer{
  background-color: lightgray;
  padding: 20px;
  text-align: center;
}

